GNOME Bugzilla – Bug 749237
gltestsrc: Assert and failed with not-neg when not linked
Last modified: 2015-05-11 19:07:30 UTC
I just notice that if gltestsrc is not link, it endup failing with no-negotiated instead with few assertions along the way. gst-launch-1.0 -v gltestsrc Définition du pipeline à PAUSED... Le pipeline a terminé la phase PREROLL... Got context from element 'gltestsrc0': gst.gl.GLDisplay=context, gst.gl.GLDisplay=(GstGLDisplay)"\(GstGLDisplayX11\)\ gldisplayx11-0"; (gst-launch-1.0:29172): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_int: assertion 'gst_structure_has_field (structure, field_name)' failed (gst-launch-1.0:29172): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_int: assertion 'gst_structure_has_field (structure, field_name)' failed (gst-launch-1.0:29172): GStreamer-CRITICAL **: gst_structure_fixate_field_nearest_fraction: assertion 'gst_structure_has_field (structure, field_name)' failed 0:00:00.032423030 29172 0x208bd90 ERROR default video-info.c:328:gst_video_info_from_caps: no width property given ERREUR : de l'élément /GstPipeline:pipeline0/GstGLTestSrc:gltestsrc0 : Erreur interne de flux de données. Information de débogage supplémentaire : gstbasesrc.c(2943): gst_base_src_loop (): /GstPipeline:pipeline0/GstGLTestSrc:gltestsrc0: streaming task paused, reason not-negotiated (-4) ERREUR : le pipeline refuse de passer en phase de préparation. Définition du pipeline à PAUSED... Définition du pipeline à READY (prêt)... Définition du pipeline à NULL... Libération du pipeline...
commit df3d415906c9df32eaba5dbf42647c4b5cc16323 Author: Nicolas Dufresne <nicolas.dufresne@collabora.com> Date: Mon May 11 15:02:02 2015 -0400 gltestsrc: Use default get_caps implementation The custom code is wrong as it ignores the templates, which leads to missing fields in the result. Instead, simply use the default get_caps implementation which does it correctly (get the template, intersect with filter and return). https://bugzilla.gnome.org/show_bug.cgi?id=749237